replaced Image with ImageBrush in SpellControl so that the image does not go over the parent border

--- a/Hextasy.CardWars/SpellControl.xaml
+++ b/Hextasy.CardWars/SpellControl.xaml
@@ -44,7 +44,9 @@
       </Grid>
     </Grid>
     <Border Grid.Column="1" Grid.Row="0" Margin="7" BorderBrush="Black" BorderThickness="2" CornerRadius="8">
-      <Image Source="{Binding ImageSource}" Stretch="Fill"/>
+      <Border.Background>
+        <ImageBrush ImageSource="{Binding ImageSource}" Stretch="Fill"/>
+      </Border.Background>
     </Border>
     <Grid Grid.Column="2">
       <Grid.RowDefinitions>
