--- a/Hextasy.CardWars/CardControl.xaml
+++ b/Hextasy.CardWars/CardControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              Height="50"
-             d:DesignHeight="50" d:DesignWidth="250">
+             d:DesignHeight="50" d:DesignWidth="350">
   <UserControl.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
@@ -49,8 +49,34 @@
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
       </Grid.RowDefinitions>
-      <TextBlock Grid.Row="0" Text="{Binding Name}" FontWeight="Bold"/>
-      <TextBlock Grid.Row="1" Text="{Binding Description}" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"/>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="Auto"/>
+      </Grid.ColumnDefinitions>
+      <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Name}" FontWeight="Bold"/>
+      <ItemsControl x:Name="Traits" Grid.Row="0" Grid.Column="1" FocusVisualStyle="{x:Null}"
+                    Height="18"
+                  ItemsSource="{Binding TraitsWithIcons}">
+        <ItemsControl.ItemsPanel>
+          <ItemsPanelTemplate>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+          </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
+        <ItemsControl.ItemTemplate>
+          <DataTemplate>
+            <Grid>
+              <Border Margin="1" BorderBrush="Black" BorderThickness="1" CornerRadius="1" Height="16" Width="16">
+                <Border.Background>
+                  <ImageBrush  ImageSource="{Binding ImageSource}" Stretch="Fill"/>
+                </Border.Background>
+                <Image/>
+              </Border>
+            </Grid>
+          </DataTemplate>
+        </ItemsControl.ItemTemplate>
+      </ItemsControl>
+      <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Description}" FontSize="10"
+                 TextWrapping="Wrap" TextTrimming="CharacterEllipsis"/>
     </Grid>
     
     <Grid Grid.Column="3">
