--- a/Hextasy.CardWars/CardWarsSettingsView.xaml
+++ b/Hextasy.CardWars/CardWarsSettingsView.xaml
@@ -13,6 +13,8 @@
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
 
     <Grid.ColumnDefinitions>
@@ -23,18 +25,28 @@
 
     <TextBlock Grid.Row="0" Grid.Column="0" Text="Number of rows: "/>
     <TextBlock Grid.Row="1" Grid.Column="0" Text="Number of columns: "/>
-    <TextBlock Grid.Row="2" Grid.Column="0" Text="Player 1 name: "/>
-    <TextBlock Grid.Row="3" Grid.Column="0" Text="Player 1 deck: "/>
-    <TextBlock Grid.Row="4" Grid.Column="0" Text="Player 2 name: "/>
-    <TextBlock Grid.Row="5" Grid.Column="0" Text="Player 2 deck: "/>
+    <TextBlock Grid.Row="2" Grid.Column="0" Text="Player 1: "/>
+    <TextBlock Grid.Row="3" Grid.Column="0" Text="Player 1 name: "/>
+    <TextBlock Grid.Row="4" Grid.Column="0" Text="Player 1 deck: "/>
+    <TextBlock Grid.Row="5" Grid.Column="0" Text="Player 2: "/>
+    <TextBlock Grid.Row="6" Grid.Column="0" Text="Player 2 name: "/>
+    <TextBlock Grid.Row="7" Grid.Column="0" Text="Player 2 deck: "/>
     
     <Slider Grid.Row="0" Grid.Column="1" Minimum="4" Maximum="12" Value="{Binding Rows}"/>
     <Slider Grid.Row="1" Grid.Column="1" Minimum="4" Maximum="15" Value="{Binding Columns}"/>
-    <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Player1}"/>
-    <ComboBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"  DisplayMemberPath="Name"
+    <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+      <RadioButton GroupName="Player1" IsChecked="{Binding Player1Human}">Human</RadioButton>
+      <RadioButton GroupName="Player1" IsChecked="{Binding Player1Cpu}">CPU</RadioButton>
+    </StackPanel>
+    <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Player1}" IsEnabled="{Binding Player1Human}"/>
+    <ComboBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"  DisplayMemberPath="Name"
               ItemsSource="{Binding Player1Decks}" SelectedItem="{Binding Player1Deck}"/>
-    <TextBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Player2}"/>
-    <ComboBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" DisplayMemberPath="Name"
+    <StackPanel Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+      <RadioButton GroupName="Player2" IsChecked="{Binding Player2Human}">Human</RadioButton>
+      <RadioButton GroupName="Player2" IsChecked="{Binding Player2Cpu}">CPU</RadioButton>
+    </StackPanel>
+    <TextBox Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Player2}" IsEnabled="{Binding Player2Human}"/>
+    <ComboBox Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" DisplayMemberPath="Name"
               ItemsSource="{Binding Player2Decks}" SelectedItem="{Binding Player2Deck}"/>
 
     <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Rows}"/>
