added DispatcherObservableCollection and replaced all usages of ObservableCollection
added most simple AI I could think of: just end turn

--- a/Hextasy.CardWars/CardWarsGameView.xaml
+++ b/Hextasy.CardWars/CardWarsGameView.xaml
@@ -9,6 +9,7 @@
   xmlns:cal="http://www.caliburnproject.org"
   mc:Ignorable="d" 
   d:DesignHeight="300" d:DesignWidth="300"
+  IsEnabled="{Binding IsHumanTurn}"
   cal:Message.Attach="[Event PreviewKeyUp] = [Action PreviewKeyUp($eventArgs)];">
 
   <UserControl.Resources>
