added AI logic to play more than 1 card if possible
added IsSelected property to card and binding in ListBox so that also AI can select cards
fixed MEF import problem that AI implementations for both players have same shared instance

--- a/Hextasy.CardWars/Styles.xaml
+++ b/Hextasy.CardWars/Styles.xaml
@@ -86,6 +86,7 @@
   <Style x:Key="CardSelectionContainerStyle" TargetType="{x:Type ListBoxItem}">
     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
     <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+    <Setter Property="IsSelected" Value="{Binding IsSelected}"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type ListBoxItem}">
