--- a/Hextasy.LightsOff/LightsOffGameResultView.xaml
+++ b/Hextasy.LightsOff/LightsOffGameResultView.xaml
@@ -1,16 +1,15 @@
-﻿<UserControl x:Class="Hextasy.SettingsShellView"
+﻿<UserControl x:Class="Hextasy.LightsOff.LightsOffGameResultView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <ContentControl Grid.Row="0" x:Name="Settings"/>
-        <Button Grid.Row="1" FontSize="20" Margin="10" Content="Start game" x:Name="StartGame"/>
-    </Grid>
+  <Grid>
+    <StackPanel Orientation="Horizontal">
+      <TextBlock Text="It took "/>
+      <TextBlock Text="{Binding Statistics.Toggles}"></TextBlock>
+      <TextBlock Text=" toggles to turn all lights off."/>
+    </StackPanel>
+  </Grid>
 </UserControl>
