--- a/Hextasy/GameResultShellView.xaml
+++ b/Hextasy/GameResultShellView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Hextasy.SettingsShellView"
+﻿<UserControl x:Class="Hextasy.GameResultShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <ContentControl Grid.Row="0" x:Name="Settings"/>
-        <Button Grid.Row="1" FontSize="20" Margin="10" Content="Start game" x:Name="StartGame"/>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="Auto"/>
+      </Grid.RowDefinitions>
+      <ContentControl Grid.Row="0" x:Name="GameResult"/>
+      <Button Grid.Row="1" FontSize="20" Margin="10" Content="Back to game selection" x:Name="Back"/>
     </Grid>
 </UserControl>
