--- a/Hextasy.CardWars/CardControl.xaml
+++ b/Hextasy.CardWars/CardControl.xaml
@@ -56,7 +56,7 @@
       <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Name}" FontWeight="Bold"/>
       <ItemsControl x:Name="Traits" Grid.Row="0" Grid.Column="1" FocusVisualStyle="{x:Null}"
                     Height="18"
-                  ItemsSource="{Binding TraitsWithIcons}">
+                  ItemsSource="{Binding Traits}">
         <ItemsControl.ItemsPanel>
           <ItemsPanelTemplate>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center"/>
