--- a/Hextasy.CardWars/CardWarsGameView.xaml
+++ b/Hextasy.CardWars/CardWarsGameView.xaml
@@ -15,7 +15,7 @@
   <UserControl.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="TemplateSelectors.xaml"/>
+        <ResourceDictionary Source="StyleSelectors.xaml"/>
         <ResourceDictionary Source="Converters.xaml"/>
         <ResourceDictionary Source="Styles.xaml"/>
         <ResourceDictionary Source="DataTemplates.xaml"/>
@@ -27,6 +27,7 @@
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="420"/>
       <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="80"/>
     </Grid.ColumnDefinitions>
 
     <Grid>
@@ -65,6 +66,19 @@
       <ItemsControl.ItemsPanel>
         <ItemsPanelTemplate>
           <framework:HexGrid Columns="{Binding Columns}"/>
+        </ItemsPanelTemplate>
+      </ItemsControl.ItemsPanel>
+    </ItemsControl>
+    
+    <ItemsControl Grid.Column="2" ItemsSource="{Binding Actions}">
+      <ItemsControl.ItemTemplate>
+        <DataTemplate>
+          <Image Source="{Binding Image}"/>
+        </DataTemplate>
+      </ItemsControl.ItemTemplate>
+      <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+          <StackPanel/>
         </ItemsPanelTemplate>
       </ItemsControl.ItemsPanel>
     </ItemsControl>
