--- a/Hextasy.CardWars/Presentation/Views/CardWarsGameView.xaml
+++ b/Hextasy.CardWars/Presentation/Views/CardWarsGameView.xaml
@@ -5,12 +5,11 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:framework="clr-namespace:Hextasy.Framework;assembly=Hextasy.Framework"
-  xmlns:cardWars="clr-namespace:Hextasy.CardWars"
   xmlns:cal="http://www.caliburnproject.org"
   xmlns:controls="clr-namespace:Hextasy.CardWars.Presentation.Controls"
   mc:Ignorable="d" 
   d:DesignHeight="300" d:DesignWidth="300"
-  IsEnabled="{Binding IsHumanTurn}"
+  IsEnabled="{Binding IsPlayerTurn}"
   cal:Message.Attach="[Event PreviewKeyUp] = [Action PreviewKeyUp($eventArgs)];">
 
   <UserControl.Resources>
