--- a/Hextasy.CardWars/Presentation/DataTemplates/DataTemplates.xaml
+++ b/Hextasy.CardWars/Presentation/DataTemplates/DataTemplates.xaml
@@ -1,10 +1,10 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:cardWars="clr-namespace:Hextasy.CardWars"
-                    xmlns:cal="http://www.caliburnproject.org"
-                    xmlns:cards="clr-namespace:Hextasy.CardWars.Cards"
-                    xmlns:logic="clr-namespace:Hextasy.CardWars.Logic"
-                    xmlns:controls="clr-namespace:Hextasy.CardWars.Presentation.Controls">
+﻿<ResourceDictionary 
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:cal="http://www.caliburnproject.org"
+  xmlns:cards="clr-namespace:Hextasy.CardWars.Cards"
+  xmlns:logic="clr-namespace:Hextasy.CardWars.Logic"
+  xmlns:controls="clr-namespace:Hextasy.CardWars.Presentation.Controls">
 
   <ResourceDictionary.MergedDictionaries>
     <ResourceDictionary Source="Styles.xaml"/>
@@ -36,6 +36,22 @@
 
   <DataTemplate DataType="{x:Type cards:SpellCard}">
     <controls:SpellControl/>
+  </DataTemplate>
+  
+  <DataTemplate DataType="{x:Type logic:MulliganAction}">
+    <controls:MulliganActionControl/>
+  </DataTemplate>
+  
+  <DataTemplate DataType="{x:Type logic:AttackAction}">
+    <controls:AttackActionControl/>
+  </DataTemplate>
+  
+  <DataTemplate DataType="{x:Type logic:PlayMonsterCardAction}">
+    <controls:PlayMonsterCardActionControl/>
+  </DataTemplate>
+  
+  <DataTemplate DataType="{x:Type logic:PlaySpellCardAction}">
+    <controls:PlaySpellCardActionControl/>
   </DataTemplate>
 
 </ResourceDictionary>
