--- a/Hextasy.CardWars/Presentation/Controls/PlayMonsterCardActionControl.xaml
+++ b/Hextasy.CardWars/Presentation/Controls/PlayMonsterCardActionControl.xaml
@@ -5,7 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+  <UserControl.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../DataTemplates/Styles.xaml"/>
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+  </UserControl.Resources>
+  <Grid>
+    <Border Style="{StaticResource ActionLogBorderStyle}">
+      <Image Source="{Binding PreviewImage}"/>
+      <Border.ToolTip>
+        <ToolTip BorderThickness="0" Background="Transparent">
+          <Image Source="{Binding PreviewImage}"/>
+        </ToolTip>
+      </Border.ToolTip>
+    </Border>
+  </Grid>
 </UserControl>
