--- a/Hextasy.CardWars/Presentation/Controls/PlaySpellCardActionControl.xaml
+++ b/Hextasy.CardWars/Presentation/Controls/PlaySpellCardActionControl.xaml
@@ -6,7 +6,23 @@
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
   mc:Ignorable="d" 
   d:DesignHeight="300" d:DesignWidth="300">
+  <UserControl.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../DataTemplates/Styles.xaml"/>
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+  </UserControl.Resources>
   <Grid>
-
+    <Border Style="{StaticResource ActionLogBorderStyle}" Height="60">
+      <Border.Background>
+        <ImageBrush ImageSource="{Binding PreviewImage}"/>
+      </Border.Background>
+      <Border.ToolTip>
+        <ToolTip BorderThickness="0" Background="Transparent">
+          <Image Source="{Binding PreviewImage}"/>
+        </ToolTip>
+      </Border.ToolTip>
+    </Border>
   </Grid>
 </UserControl>
