--- a/Hextasy.CardWars/Presentation/DataTemplates/Styles.xaml
+++ b/Hextasy.CardWars/Presentation/DataTemplates/Styles.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary 
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:cards="clr-namespace:Hextasy.CardWars.Cards">
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <ResourceDictionary.MergedDictionaries>
     <ResourceDictionary Source="Storyboards.xaml"/>
@@ -409,6 +408,22 @@
         </ControlTemplate>
       </Setter.Value>
     </Setter>
+  </Style>
+  
+  <Style x:Key="ActionLogBorderStyle" TargetType="{x:Type Border}">
+    <Style.Setters>
+      <Setter Property="CornerRadius" Value="15"/>
+      <Setter Property="BorderBrush" Value="Black"/>
+      <Setter Property="BorderThickness" Value="3"/>
+    </Style.Setters>
+    <Style.Triggers>
+      <DataTrigger Binding="{Binding Owner}" Value="Player1">
+        <Setter Property="Background" Value="Pink"/>
+      </DataTrigger>
+      <DataTrigger Binding="{Binding Owner}" Value="Player2">
+        <Setter Property="Background" Value="LightBlue"/>
+      </DataTrigger>
+    </Style.Triggers>
   </Style>
 
 </ResourceDictionary>
